<resources>
    <string name="app_name">Gar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="signup">SignUp</string>
    <string name="msg_SignUpSuccess">SignUp successfully</string>
    <string name="msg_SignUpFail">SignUp fail</string>
    <string name="msg_UserNameIsInvalid">Username?</string>
    <string name="msg_PasswordInvalid">Password?</string>
    <string name="msg_PasswordLength"> 8 &lt;= password length &lt;= 12 </string>
    <string name="msg_PasswordNotConform">Password not conform!</string>
    <string name="msg_LoginSuccess">Login successfully</string>
    <string name="msg_LoginFail">Login fail</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="carinfo">CarInfo</string>
    <string name="carname">Car name</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="fuelconsumption">Fuel consumption</string>
    <string name="enginedisplacement">Engine Displacement</string>
    <string name="price">Price</string>
    <string name="msg_EditSuccess">Edit Success</string>
    <string name="msg_EditFail">Edit Fail</string>
    <string name="msg_UserNameHasBeenRegistered">User name has been registered</string>
    <string name="msg_CarNameIsInvalid">Car name?</string>
    <string name="msg_BrandIsInvalid">Brand?</string>
    <string name="msg_ModelIsInvalid">Model?</string>
    <string name="msg_FuelConsumptionIsInvalid">Fuel consumption?</string>
    <string name="msg_FuelConsumptionIsANumber">Fuel consumption is a number...</string>
    <string name="msg_EnginedisplacementIsInvalid">Engine displacement?</string>
    <string name="msg_EnginedisplacementIsANumber">Engine displacement is a number...</string>
    <string name="msg_PriceIsInvalid">Price?</string>
    <string name="msg_PriceIsANumber">Price is a number...</string>
    <string name="signout">Sign out</string>
    <string name="carnameinfo">Car name:</string>
    <string name="brandinfo">Brand:</string>
    <string name="modelinfo">Model:</string>
    <string name="fuelconsumptioninfo">Fuel consumption:</string>
    <string name="enginedisplacementinfo">Engine Displacement:</string>
    <string name="priceinfo">Price:</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="msg_NoDataFound">No data found</string>
</resources>
