<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="44dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:padding="7dp"
        android:background="@drawable/textviewshape"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/login_username"
        android:hint="@string/username"/>

    <EditText
        android:padding="7dp"
        android:background="@drawable/textviewshape"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/login_password"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginbtn"
            android:background="@drawable/buttonshape"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/signupbtn"
            android:background="@drawable/buttonshape"/>

    </LinearLayout>

</LinearLayout>
