<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carnameinfo"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carinfo_carname"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brandinfo"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carinfo_brand"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelinfo"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carinfo_model"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuelconsumptioninfo"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carinfo_fuelconsumption"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enginedisplacementinfo"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carinfo_enginedisplacement"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceinfo"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carinfo_price"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="onBackClick"
            android:background="@drawable/textviewshape"/>

        <Button
            android:layout_marginTop="150dp"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="onDeleteClick"
            android:background="@drawable/textviewshape"/>

        <Button
            android:layout_marginTop="150dp"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="onNextClick"
            android:background="@drawable/textviewshape"/>
    </LinearLayout>
</LinearLayout>
